--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
   },
