--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   },
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
+    "@types/socket.io": "^3.0.2",
     "bootstrap": "^4.6.0",
     "firebase": "^8.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
