--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "sass": "^1.36.0",
     "typescript": "^4.3.2",
     "vite": "^2.3.8"
   }
