--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.7.1",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
