--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^9.2.4",
-    "socket.io-client": "^4.1.3"
+    "socket.io-client": "^4.1.3",
+    "workbox-window": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -28,6 +29,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.36.0",
     "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "vite": "^2.3.8",
+    "vite-plugin-pwa": "^0.11.2"
   }
 }
